--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = [
     {name = "fovegage",email = "fovegage@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.15"
 dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
-    "fastapi (>=0.116.1,<0.117.0)"
+    "fastapi (>=0.116.1,<0.117.0)",
+    "loguru (>=0.7.3,<0.8.0)",
+    "pydantic-settings (>=2.10.1,<3.0.0)",
+    "python-socketio (>=5.13.0,<6.0.0)",
 ]
 
 
