--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
     "python-socketio (>=5.13.0,<6.0.0)",
+    "cachetools (>=6.1.0,<7.0.0)",
+    "tenacity (>=9.1.2,<10.0.0)",
 ]
 
 
