--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 **/.env
 
+NOTE.md
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
@@ -18,7 +19,6 @@
 releases/
 .DS_Store
 *.swp
-plugins/
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
