--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-socketio (>=5.13.0,<6.0.0)",
     "cachetools (>=6.1.0,<7.0.0)",
     "tenacity (>=9.1.2,<10.0.0)",
+    "tldextract (>=5.3.0,<6.0.0)",
 ]
 
 
