--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,16 @@ dependencies = [
     "cachetools (>=6.1.0,<7.0.0)",
     "tenacity (>=9.1.2,<10.0.0)",
     "tldextract (>=5.3.0,<6.0.0)",
+    "curl-cffi (>=0.12.0,<0.13.0)",
+    "drissionpage (>=4.1.0.18,<5.0.0.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "mirrors"
+url = "https://mirrors.aliyun.com/pypi/simple/"
+priority = "primary"
