--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "tldextract (>=5.3.0,<6.0.0)",
     "curl-cffi (>=0.12.0,<0.13.0)",
     "drissionpage (>=4.1.0.18,<5.0.0.0)",
+    "aiohttp (>=3.12.14,<4.0.0)",
 ]
 
 
