--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Set version env
         run: |
           echo "IMAGE_ID=registry.cn-beijing.aliyuncs.com/biyao/public" >> $GITHUB_ENV
-          echo "VERSION=worker-${GITHUB_REPOSITORY##*/}-${GITHUB_SHA::7}" >> $GITHUB_ENV
+          echo "VERSION=${GITHUB_REPOSITORY##*/}-${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Log into registry
         run: echo "${{ secrets.ALIYUN_REGISTRY_PASSWORD }}" | docker login ${{ secrets.ALIYUN_REGISTRY_HOSTNAME }} -u ${{ secrets.ALIYUN_REGISTRY_USERNAME }} --password-stdin
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           password: ${{ secrets.REMOTE_PASSWORD }}
           script: |
-            cd /root/deploy/rely/worker
+            cd /root/deploy/rely
             echo "Updating image version in docker-compose.yaml..."
             echo "IMAGE_ID=${{ env.IMAGE_ID }}" > .env
             echo "VERSION=${{ env.VERSION }}" >> .env
