--- a/sdk/pyproject.toml
+++ b/sdk/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "relyapi"
-version = "0.1.3"
+version = "0.1.5"
 description = ""
 authors = [
     {name = "fovegage",email = "fovegage@gmail.com"}
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "tenacity (>=9.1.2,<10.0.0)"
 ]
 
 
