--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "relyapi"
+name = "rely"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "fovegage",email = "fovegage@gmail.com"}
+    { name = "fovegage", email = "fovegage@gmail.com" }
 ]
 readme = "README.md"
 requires-python = ">=3.10,<3.15"
@@ -18,15 +18,10 @@ dependencies = [
     "tenacity (>=9.1.2,<10.0.0)",
     "tldextract (>=5.3.0,<6.0.0)",
     "curl-cffi (>=0.12.0,<0.13.0)",
-    "aiohttp (>=3.12.14,<4.0.0)",
+    "relyapi (>=0.1.5,<0.2.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[[tool.poetry.source]]
-name = "mirrors"
-url = "https://mirrors.aliyun.com/pypi/simple/"
-priority = "primary"
