--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "tldextract (>=5.3.0,<6.0.0)",
     "curl-cffi (>=0.12.0,<0.13.0)",
     "relyapi (>=0.1.6,<0.2.0)",
+    "drissionpage (>=4.1.0.18,<5.0.0.0)",
 ]
 
 
