--- a/fronted/Dockerfile
+++ b/fronted/Dockerfile
@@ -1,49 +1,34 @@
 # 使用官方Node.js运行时作为基础镜像
 FROM node:20-alpine AS base
 
-# 安装依赖阶段
-FROM base AS deps
-# 检查 https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine
+# 安装系统依赖
 RUN apk add --no-cache libc6-compat
+
+# 设置工作目录
 WORKDIR /app
 
-# 复制package.json和package-lock.json
+# 复制package文件
 COPY package.json package-lock.json* ./
-RUN npm ci --only=production
 
-# 构建阶段
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+# 安装所有依赖（包括开发依赖，构建时需要）
+RUN npm ci
+
+# 复制源代码
 COPY . .
 
 # 设置环境变量
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production
 
 # 构建应用
 RUN npm run build
-
-# 生产运行阶段
-FROM base AS runner
-WORKDIR /app
-
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
 
 # 创建非root用户
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# 复制构建产物
-COPY --from=builder /app/public ./public
-
 # 设置正确的权限
-RUN mkdir .next
-RUN chown nextjs:nodejs .next
-
-# 复制构建的应用
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+RUN chown -R nextjs:nodejs /app
 
 # 切换到非root用户
 USER nextjs
@@ -51,8 +36,9 @@ USER nextjs
 # 暴露端口
 EXPOSE 3000
 
-ENV PORT 3000
-ENV HOSTNAME "0.0.0.0"
+# 设置运行时环境变量
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
 
 # 启动应用
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
